k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-backend-svc
  namespace: school-hub
spec:
  type: NodePort
  selector:
    app: school-backend
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
