k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-frontend-svc
  namespace: school-hub
spec:
  type: NodePort
  selector:
    app: school-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
